--- a/pan4.ipynb
+++ b/pan4.ipynb
@@ -67,7 +67,7 @@
     "import pandas_datareader.data as web\n",
     "start=\"1949/5/16\"\n",
     "end=\"2016/9/30\"#適当に入れ替えてください。\n",
-    "N225 = pdr.DataReader(\"NIKKEI225\", 'fred',start,end)\n",
+    "N225 = web.DataReader(\"NIKKEI225\", 'fred',start,end)\n",
     "N225.head(1)"
    ]
   },
