--- a/270/pan4.ipynb
+++ b/270/pan4.ipynb
@@ -263,7 +263,12 @@
     }
    ],
    "source": [
-    "price = web.DataReader(\"aapl\", 'yahoo',\"1990/1/4\",end)#yahooのサービスの停止により変更\n",
+    "price = web.DataReader("aapl", 'morningstar',"1990/1/4",end)#yahooのサービスの停止により変更",
+    "price=price.reset_index() #indexの解除",
+    "del price["Symbol"] #Symbolの削除",
+    "ind=price["Date"]#新しいインデックスの作成",
+    "price=price.iloc[:,1:]#新しいデータの作成",
+    "price.index=ind#新しいインデックスに入れ替え",    
     "price.head(1)"
    ]
   },
